# Central-MCU

./: .gitignore  CMakeLists.txt  Interrupt_Test.ino  README.md  mortorDriver.c  test.c  test.py  testEncoder.c  testPWM.c
motorDriver/: CMakeLists.txt  cable_transceiver.cpp  encoder.cpp  main.cpp  motorDriver.c  motorDriver.cpp  stabilisation_uart.cpp
motorDriver/inc/: cable_transceiver.h  encoder.h  global.h  motorDriver.h  stabilisation_uart.h
testFunctions/: CMakeLists.txt  Incremental_with_initialization.c  Incremental_with_position.c  myTwoCores.c  testADC.c  testGPIO.c
